freki: fix ImportCommandTest ()